# raygayme

./: #main.c#  .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.ps1  compile_commands.json  log.txt  main.c  makefile  run.bat  world.plist
assets/: Blender.Asset.To.Json.py  Selection.make.NOT.interactive.py  Selection.make.interactive.py  Set.Custom.Properties.py  heighmaps.json  objects.json  static_objects.json  terrain.blend  terrain.blend1  terrain.glb
assets/assets/: ASSET_ROCK.glb  ASSET_TREE.glb  ASSET_TREE_TRUNK.glb
assets/chunks/: CHUNK_-1_-1.glb  (+8 more)
client/: CMakeLists.txt  build.ps1  build.sh  compile_commands.json  game  log.txt  main.c  main.plist  makefile  world.plist  zip.sh
client/assets/: Blender.Asset.To.Json.py  Selection.make.NOT.interactive.py  Selection.make.interactive.py  Set.Custom.Properties.py  heighmaps.json  objects.json  terrain.blend  terrain.blend1
client/assets/chunks/: TERRAIN.glb
client/assets/shaders/: outline.fs  outline.vs  shadow.fs  shadow.vs
client/assets/terrain/: collision.glb  terrain.mtl
client/include/: assetLoader.h  assets.h  client.h  cstdio  entity_state.h  mycamera.h  network.h  player.h  raylib.h  rlgl.h  world.h
client/src/: assetLoader.c  assets.c  client.c  game.c  mycamera.c  network.c  player.c  world.c
client/utils/: blender_asset_to_json.py
include/: assetLoader.h  client.h  debug.h  game.h  mycamera.h  player.h  world.h
server/: CMakeLists.txt  build.ps1  build.sh  compile_commands.json  log.txt  main.c  makefile  server
server/include/: server.h  serverAssetLoader.h
server/src/: server.c  serverAssetLoader.c
shared/: player_state.h
src/: assetLoader.c  client.c  game.c  mycamera.c  player.c  world.c
utils/: blender_asset_to_json.py
(+34 files in other folders)
